--- a/HTML-CSS-JS/login.html
+++ b/HTML-CSS-JS/login.html
@@ -3,14 +3,14 @@
    <body>
        <h2>EX Of Login</h2>
        <form>
-           <label for="firstname">First Name:</label><br>
-           <input type="text"id="firstname" name="firstname"value="Mohamed"><br>
-           <label for="lastname">Last Name:</label><br>
-           <input type="text"id="lastname"name="lastname"value="Saif"><br><br>
+           <label for="firstname">First Name</label><br>
+           <input type="text"id="firstname"name="firstname"value="Mohamed"><br></input>
+           <label for="lastname">Last Name</label><br>
+           <input type="text"id="lastname"name="lastname"value="Saif"><br></input>
        </form>
        <button onclick="myFuntion()">Click me</button>
        <p id="result"></p>
        <script src="appendnames.js"></script>
-   
+   </body>
     </body>
 </html>
